--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: grub2-theme-preview
 Section: utils
 Priority: optional
 Maintainer: coolshou <coolshou2060@gmail.com>
-Build-Depends: debhelper-compat (= 12), dh-python, python3-all
+Build-Depends: debhelper-compat (= 12), dh-python, python3-all, python3-parameterized,
+ mtools, ovmf, qemu-system
 Standards-Version: 4.4.1
 Homepage: https://github.com/hartwork/grub2-theme-preview.git
 #Vcs-Browser: https://salsa.debian.org/debian/grub2-theme-preview
